ingress/ingress-controller.yml
apiVersion: extension/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
replicas: 1
selector:
 matchLabels:
   name: ingress-controller
template:
  metadata:
    name: ingress-controller
    labels:
      name: ingress-controller
  spec:
    containerPort:
      - name: nginx-ingress-controller
        image: ingresspub/ingress-data-explorer
    args:
      - /nginx-ingress-controller
      - --configmap=$(POD_NAMESPACE)/nginx-configuration
    ports:
      - name: http
        containerPort: 80
      - name: https
        containerPort: 443
