ingress/service-ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: Nodeport
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    name: ingress-controller
