ingress/ingress-resource-domain.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata: ingress-watch-wear
spec:
  rules:
  - host: wear.my-online-store.com
    http:
      paths:
      - backend:
          serviceName: wear-service
          servicePort: 80
  - host: watch.my-online-store.com
    http:
      paths:
      - backend:
          serviceName: watch-service
          servicePort: 80
